Update application serializer
Fixes DFE-Digital/teacher-training-entitlement-board#XXX

Fixes DFE-Digital/teacher-training-entitlement-board#XXX

Fixes DFE-Digital/teacher-training-entitlement-board#XXX
